created photo gallery section

--- a/index.html
+++ b/index.html
@@ -59,23 +59,83 @@
       </div>
     </section>
 
-    <!-- <section class="Facilities">
-      <h1>ABOUT PROPRIETY</h1>
+    <section class="Facilities">
+      <h1><strong class="strong">ABOUT</strong> <span class="pro">PROPRIETY</span></h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ratione, odit blanditiis dolore a beatae debitis. Rerum aliquam sit porro laboriosam, quidem architecto, dolorem exercitationem vel perferendis ut, non eos.</p>
       <div class="row">
         <div class="facilities-row">
+          <span><i class="fa-solid fa-water-ladder"></i></span>
           <h3>Swimming Pool</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="facilities-row">
+          <span><i class="fa-solid fa-dumbbell"></i></span>
           <h3>Indoor Gym</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="facilities-row">
-          <h3>FirePlace</h3>
+          <span><i class="fa-solid fa-car"></i><span>
+          <h3>Car Park</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
-    </section> -->
+    </section>
+
+
+    <section class="gallery">
+      <h1> <strong class="strong">OUR PHOTO</strong> <span class="pro">GALLERY</span></h1>
+      <div class="gallery-row" >
+        <div class="gallery-hall">
+          <img src="img/bedroom.jpg" alt="">
+          <div class="layer">
+           <h3>Modern Bedroom</h3>
+          </div>
+        </div>
+        <div class="gallery-hall">
+          <img src="img/Pool.jpg" alt="">
+          <div class="layer">
+            <h3>Modern Swimming Pool</h3>
+           </div>
+        </div>
+        <div class="gallery-hall">
+          <img src="img/library.avif" alt="">
+          <div class="layer">
+            <h3>Modern Libary</h3>
+           </div>
+        </div>
+        <div class="gallery-hall">
+          <img src="img/Balcony.avif" alt="">
+          <div class="layer">
+            <h3>Open View Balcony</h3>
+           </div>
+        </div>
+        <div class="gallery-hall">
+          <img src="img/Ktchen.jpg" alt="">
+          <div class="layer">
+            <h3>Modern fully <br> Furnished Kitchen</h3>
+           </div>
+        </div>
+        <div class="gallery-hall">
+          <img src="img/CarPark.jpg" alt="">
+          <div class="layer">
+            <h3>Spacious Car Park</h3>
+           </div>
+        </div>
+        <div class="gallery-hall">
+          <img src="img/Sitting room.jpg" alt="">
+          <div class="layer">
+            <h3>Modern Sitting Room</h3>
+           </div>
+        </div>
+        <div class="gallery-hall">
+          <img src="img/playingGround.jpg" alt="">
+          <div class="layer">
+            <h3>Spacious Playing Ground</h3>
+           </div>
+        </div>
+      </div>
+     
+    </section>
 
 
     <script src="js/script.js"></script>
