created testimonial section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section class="main-course">
       <div id="main-course-inner">
-        <h1>Discover Your Dream <br />Property with SHONEX</h1>
+        <h1>Discover Your Dream <br />Property With SHONEX</h1>
         <p>
           This exclusive residential complex offers 13 living units with <br />
           carefully designed and optimally tailored floor plans.
@@ -137,6 +137,68 @@
      
     </section>
 
+    <section class="testimonial">
+      <h1><strong class="strong">What Our Client</strong> <span class="pro">Says</span></h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, laudantium.</p>
+   <div class="row">
+    <div class="testimonial-col">
+      <img src="./img/man.jpeg" alt="">
+      <div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, facere.</p>
+        <h3>John Doe</h3>
+  <div class="icons">
+    <i class="fa-solid fa-star"></i>
+    <i class="fa-solid fa-star"></i>
+    <i class="fa-solid fa-star"></i>
+    <i class="fa-solid fa-star"></i>
+    <i class="fa-regular fa-star"></i>
+  </div>
+      </div>
+    </div>
+    <div class="testimonial-col">
+      <img src="./img/man.jpeg" alt="">
+      <div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, facere.</p>
+        <h3>John Doe</h3>
+        <div class="icons">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+      </div>
+    </div>
+    <div class="testimonial-col">
+      <img src="./img/man.jpeg" alt="">
+      <div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, facere.</p>
+        <h3>John Doe</h3>
+        <div class="icons">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+      </div>
+    </div>
+    <div class="testimonial-col">
+      <img src="./img/man.jpeg" alt="">
+      <div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, facere.</p>
+        <h3>John Doe</h3>
+        <div class="icons">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+      </div>
+    </div>
+   </div>
+    </section>
 
     <script src="js/script.js"></script>
   </body>
