created quuestion and answer section

--- a/index.html
+++ b/index.html
@@ -200,6 +200,38 @@
    </div>
     </section>
 
+<section class="QandA">
+  <h1> <strong class="strong">QUESTIONS</strong> &<span class="pro"> ANSWER</span> </h1>
+  <div class=" QandA-row">
+    <div class="QandA-col">
+      <h3>WHY YOU SHOULD CHOOSE US?</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, vel! Odit adipisci deserunt et eaque ipsum praesentium sequi sed recusandae. Deleniti tenetur praesentium nulla quae beatae commodi inventore hic amet.</p>
+    </div>
+    <div class="QandA-col">
+      <h3>WHY YOU SHOULD CHOOSE US?</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, vel! Odit adipisci deserunt et eaque ipsum praesentium sequi sed recusandae. Deleniti tenetur praesentium nulla quae beatae commodi inventore hic amet.</p>
+    </div>
+    <div class="QandA-col">
+      <h3>WHY YOU SHOULD CHOOSE US?</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, vel! Odit adipisci deserunt et eaque ipsum praesentium sequi sed recusandae. Deleniti tenetur praesentium nulla quae beatae commodi inventore hic amet.</p>
+    </div>
+    <div class="QandA-col">
+      <h3>WHY YOU SHOULD CHOOSE US?</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, vel! Odit adipisci deserunt et eaque ipsum praesentium sequi sed recusandae. Deleniti tenetur praesentium nulla quae beatae commodi inventore hic amet.</p>
+    </div>
+    <div class="QandA-col">
+      <h3>WHY YOU SHOULD CHOOSE US?</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, vel! Odit adipisci deserunt et eaque ipsum praesentium sequi sed recusandae. Deleniti tenetur praesentium nulla quae beatae commodi inventore hic amet.</p>
+    </div>
+    <div class="QandA-col">
+      <h3>WHY YOU SHOULD CHOOSE US?</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, vel! Odit adipisci deserunt et eaque ipsum praesentium sequi sed recusandae. Deleniti tenetur praesentium nulla quae beatae commodi inventore hic amet.</p>
+    </div>
+  </div>
+</section>
+
+
+
     <script src="js/script.js"></script>
   </body>
 </html>
