created newsletter,contact and footer section

--- a/index.html
+++ b/index.html
@@ -230,8 +230,93 @@
   </div>
 </section>
 
+<section class="newsletter" >
+  <div class="newtext">
+    <h4>Subscribe Newsletters!</h4>
+    <p>
+      Get E-mail updates about our latest Apartment and
+      <span>Land offers.</span>
+    </p>
+  </div>
+  <div class="form">
+    <input type="text " placeholder="Your email address" />
+    <button class="btn" type="submit" class="normal1">Sign Up</button>
+  </div>
+</section>
 
+<section class="contact-us">
+  <h1><strong class="strong">CONTACT</strong> <span class="pro">US</span></h1>
+  <div class="row">
+    <div class="contact-col">
+      <div>
+        <i class="fa fa-home fa-beat"></i>
+        <span>
+          <h5>Alpha and Omega Road, Meta Building</h5>
+          <p>Universe, Planet, WW</p>
+        </span>
+      </div>
+      <div>
+        <i class="fa fa-phone fa-beat"></i>
+        <span>
+          <h5>+654 3542 556</h5>
+          <p>Monday To friday, 9AM to 5PM</p>
+        </span>
+      </div>
+      <div>
+        <i class="fa fa-envelope fa-beat"></i>
+        <span>
+          <h5>Info@shonexedu.com</h5>
+          <p>Email us your query</p>
+        </span>
+      </div>
+    </div>
+    <div class="contact-col">
+      <form action="https://formspree.io/f/mwkdyywv" method="post">
+        <input
+          type="text"
+          placeholder="Enter your name"
+          name="name"
+          required
+        />
+        <input
+          type="email"
+          placeholder="Enter your email address"
+          name="email"
+          required
+        />
+        <input
+          type="text"
+          placeholder="Enter your subject"
+          name="subject"
+          required
+        />
+        <textarea
+          rows="8"
+          placeholder="Message"
+          name="message"
+          required
+        ></textarea>
+        <button class="btn"  type="submit">Send Message</button>
+      </form>
+    </div>
+  </div>
+</section>
 
-    <script src="js/script.js"></script>
+<footer>
+  <a href="index.html"
+  >  SHONEX <span><i class="fa-solid fa-house-chimney"></i><span
+></a>
+<h4> All Right Reserved &copy;2024 Shonex.</h4>
+
+<div class="social-icons">
+  <a href=""><i class="fa-brands fa-facebook"></i></a>
+  <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+  <a href=""> <i class="fa-brands fa-linkedin"></i></a>
+  <a href=""><i class="fa-brands fa-instagram"></i></a>
+</div>
+
+</footer>
+
+<script src="js/script.js"></script>
   </body>
 </html>
