created the footer section

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
       </div>
     </div>
     <div class="testimonial-col">
-      <img src="./img/man.jpeg" alt="">
+      <img src="./img/maryjane.webp" alt="">
       <div>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, facere.</p>
-        <h3>John Doe</h3>
+        <h3>Mary Jane</h3>
         <div class="icons">
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
@@ -170,10 +170,10 @@
       </div>
     </div>
     <div class="testimonial-col">
-      <img src="./img/man.jpeg" alt="">
+      <img src="./img/janedoe.webp" alt="">
       <div>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, facere.</p>
-        <h3>John Doe</h3>
+        <h3>Jane Doe</h3>
         <div class="icons">
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
@@ -184,10 +184,10 @@
       </div>
     </div>
     <div class="testimonial-col">
-      <img src="./img/man.jpeg" alt="">
+      <img src="./img/Bman.webp" alt="">
       <div>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, facere.</p>
-        <h3>John Doe</h3>
+        <h3>Micheal Derrick</h3>
         <div class="icons">
           <i class="fa-solid fa-star"></i>
           <i class="fa-solid fa-star"></i>
@@ -200,7 +200,7 @@
    </div>
     </section>
 
-<section class="QandA">
+    <section class="QandA">
   <h1> <strong class="strong">QUESTIONS</strong> &<span class="pro"> ANSWER</span> </h1>
   <div class=" QandA-row">
     <div class="QandA-col">
@@ -228,7 +228,7 @@
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, vel! Odit adipisci deserunt et eaque ipsum praesentium sequi sed recusandae. Deleniti tenetur praesentium nulla quae beatae commodi inventore hic amet.</p>
     </div>
   </div>
-</section>
+    </section>
 
 <section class="newsletter" >
   <div class="newtext">
@@ -271,7 +271,7 @@
       </div>
     </div>
     <div class="contact-col">
-      <form action="https://formspree.io/f/mwkdyywv" method="post">
+      <form action=https://formspree.io/f/xdoqrdkb method="post">
         <input
           type="text"
           placeholder="Enter your name"
