--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="navlists" id="navLists">
           <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
           <ul>
-            <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="About.html">About Us</a></li>
             <li><a href="#">Proprties</a></li>
             <li><a href="#">Services</a></li>
           </ul>
